--- a/DLCServer/package.json
+++ b/DLCServer/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "node-forge": "^1.3.1",
+    "react": "^19.2.0",
     "sqlite3": "^5.1.7",
     "xlsx": "^0.18.5"
   },
